--- a/gao1/index.html
+++ b/gao1/index.html
@@ -6,9 +6,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	<div class="wrap">
-		
-	</div>
+	<div class="wrap"></div>
 	<script src="bundle.js"></script>
 </body>
 </html>
